@@ -1,4 +1,3 @@
 if ENV['RAILS_ENV'] == 'test' then
-  require 'test_help'
   require 'mocha'
 end
